# memo-mcp

./: .gitignore  CLAUDE.md  README.md  START_HERE.md  STATUS.md  pyproject.toml
.github/workflows/: publish.yml
skill-outputs/api-design/: api-design_memo-mcp-tools_2026-05-01_0900.md
skill-outputs/batch-job-design/: batch-job-design_memo-mcp-reindex_2026-05-01_0900.md
skill-outputs/code-review/: code-review_t01-t08-source-files_2026-05-03_0000.md
skill-outputs/database-design-optimization/: database-design-optimization_memo-mcp_2026-05-01_0900.md
skill-outputs/dependency-management/: dependency-management_memo-mcp-v010_2026-05-03_0030.md
skill-outputs/generate-functional-design/: generate-functional-design_memo-mcp-v010_2026-05-01_0900.md
skill-outputs/generate-technical-design/: generate-technical-design_memo-mcp_2026-05-01_0900.md
skill-outputs/generate-tests/: generate-tests_memo-mcp-full-suite_2026-05-03_0020.md
skill-outputs/implement-business-logic/: implement-business-logic_cli-serve-reindex_2026-05-03_0010.md  implement-business-logic_logging-server-tools_2026-05-02_1400.md  implement-business-logic_storage-open-db_2026-05-02_1100.md  implement-business-logic_storage-query-functions_2026-05-02_1348.md
skill-outputs/implementation-plan/: implementation-plan_memo-mcp-v010_2026-05-02_1000.md
skill-outputs/release-prep/: pypi-publish-guide_2026-05-03.md
skill-outputs/scaffold-creation/: scaffold-creation_memo-mcp-v010_2026-05-02_1000.md
src/memo_mcp/: cli.py  logging.py  (+3 more)
tests/: conftest.py  test_cli.py  test_storage.py  test_tools.py
(+2 files in other folders)
